# servant-api-doc-experiment

./: CHANGELOG.md  Makefile  README.md  default.nix  servant-api-doc.cabal  shell.nix
app/: Main.hs
nix/: ch-hs-imports.nix  pinned.nix
src/: App.hs  Common.hs  Import.hs  Server.hs
src/Capability/: Address.hs  User.hs
src/Entity/: Address.hs  User.hs  UserAddress.hs
