cabal-version:      2.4
name:               servant-api-doc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Server


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Modules included in this library but not exported.
    other-modules:
          Import
        , App
        , Common
        , Entity.User
        , Entity.Address
        , Entity.UserAddress
        , Capability.User
        , Capability.Address
    build-depends:
          base ^>=4.14.3.0
        , text
        , relude
        , aeson
        , servant
        , servant-server
        , openapi3
        , servant-openapi3
        , servant-swagger-ui
        , aeson-pretty
        , lens
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
      -Wall

executable servant-api-doc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        servant-api-doc,
        relude,
        wai,
        warp

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
